# styleTransfer

./: .gitignore  pyproject.toml  styleRepresentationScratch.ipynb  styleTransfer.ipynb
invert_old/: invert.py  invertScratch.ipynb
